--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -1,11 +1,11 @@
 body{
    color: blue;
-   background-color: white;
+   background-color: purple;
    font-style: Arial;
     font-size: 22px;
    }
 p{color: yellow;
-background-color: black;
+background-color: blue;
 }
 p.malik{
 text-shadow: -1px solid black;
@@ -15,4 +15,21 @@ border: 2px solid green;
 }
 p.malik{
 text-aline:  
-    
+
+}
+.wrapper{
+display:grid;
+grid-template-columns: 1fr 1fr;
+grid-template-area: "content1 content2";
+grid-template-rows: 50px 100px
+
+}  
+section{
+	display:grid;
+	grid.area:"content1";
+}
+
+.content2{
+	display:grid;
+	grid-area:"content2";
+}
